--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/icons/icon128.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Go Board Exporter</title>
 </head>
